python-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: python-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: jigarsoni77/flask-app-inc:latest
        ports:
        - containerPort: 8000
