pythona-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: python.167.235.219.2.nip.io 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-app
            port:
              number: 80
